# mpl-core-anchor-examples

./: .gitignore  Anchor.toml  package.json
programs/mpl-core-anchor-examples/: Cargo.toml
programs/mpl-core-anchor-examples/src/: error.rs  lib.rs
programs/mpl-core-anchor-examples/src/instructions/: add_collection_plugin_v1.rs  add_plugin_v1.rs  approve_collection_plugin_authority_v1.rs  approve_plugin_authority_v1.rs  create_collection_v1.rs  create_v1.rs  mod.rs  remove_collection_plugin_v1.rs  remove_plugin_v1.rs  revoke_collection_plugin_authority_v1.rs  revoke_plugin_authority_v1.rs  transfer_v1.rs  update_collection_plugin_v1.rs  update_plugin_v1.rs
tests/: mpl-core-anchor-examples.ts
